                    - clone()
                    - _clone_object()
                    - _clone_custom_values()
                    - _clone_m2m()
                    - _copy_properties()
                    - _copy_relations()
                    - _pre_save_clone()
                    - _post_clone()
                    - _post_save_clone()
            - The function 'creme_core.utils.translation.get_model_verbose_name()' is deprecated;
              use 'smart_model_verbose_name()' instead.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - In 'creme_core.templatetags' :
                - In the module "creme_core_tags", the argument "callback_url" of '{% inner_edition_uri %}' is deprecated.
                - In the module "creme_ctype" :
                    - The tag "{% ctype_for_model %}" is deprecated; use the filter "|ctype_for_instance" instead.
                    - The tag "{% ctype_for_swappable %}" is deprecated; use the filter "|ctype_for_swappable" instead.
                    - The tag "{% ctype_counted_instances_label %}" is deprecated; use the filter "|ctype_counted_label" instead.
                    - The filter "|ctype_can_be_mass_imported" is deprecated.
            - App :
                * Persons :
                    - The method 'models.base.PersonWithAddressesMixin._post_save_clone()' is deprecated.
                * Assistants :
                    - The constant 'MIN_HOUR_4_TODO_REMINDER' is deprecated;
                      use 'setting_keys.todo_reminder_key.id' instead.
                * Activities :
                    - The constants 'NARROW', 'FLOATING_TIME' & 'FLOATING' are now deprecated;
                      use 'Activity.FloatingType.*' instead.
                    - The constants 'SETTING_*' are now deprecated; use 'activities.setting_keys' instead.