@@ -246,7 +246,9 @@ class Populator(BasePopulator):
     def _populate_setting_values(self):
         create_svalue = SettingValue.objects.get_or_create
         create_svalue(key_id=setting_keys.global_filters_edition_key.id, defaults={'value': False})
-        create_svalue(key_id=setting_keys.block_opening_key.id,   defaults={'value': True})
+        # create_svalue(key_id=setting_keys.block_opening_key.id,   defaults={'value': True})
+        create_svalue(key_id=setting_keys.brick_opening_key.id, defaults={'value': True})
+        # create_svalue(key_id=setting_keys.brick_showempty_key.id, defaults={'value': True})
         create_svalue(key_id=setting_keys.block_showempty_key.id, defaults={'value': True})
         create_svalue(key_id=setting_keys.currency_symbol_key.id, defaults={'value': True})
 
